# dragon

dragonback/: .gitignore  Dockerfile  manage.py  pyproject.toml
dragonback/authapp/: models.py  views.py
dragonback/authapp/migrations/: 0001_initial.py
dragonback/dragonback/: asgi.py  settings.py  urls.py  wsgi.py
dragonback/profileapp/: admin.py  models.py  serializers.py  urls.py  views.py
dragonback/profileapp/migrations/: 0001_initial.py
dragonsnet/: Dockerfile  package-lock.json  package.json
dragonsnet/src/: index.tsx
dragonsnet/src/components/errors/: Error404.tsx
dragonsnet/src/components/layout/: Content.tsx  Layout.tsx
dragonsnet/src/components/layout/content/bigavatar/: BigAvatar.tsx
dragonsnet/src/components/layout/content/controlpanel/: ControlPanel.tsx
dragonsnet/src/components/layout/content/controlpanel/avatar/: UserAvatar.tsx
dragonsnet/src/components/layout/content/galery/: Galery.tsx
dragonsnet/src/components/layout/header/: Header.tsx
dragonsnet/src/components/layout/header/companylogo/: CompanyLogo.tsx
dragonsnet/src/components/layout/header/searchfield/: SearchField.tsx
dragonsnet/src/components/layout/header/topbuttons/: InfoButton.tsx  LogoutButton.tsx  UserButton.tsx
dragonsnet/src/components/loader/: Loader.tsx
dragonsnet/src/components/pages/auth/: Login.tsx  Registration.tsx
dragonsnet/src/components/routes/: MyRoutes.tsx  list.ts
dragonsnet/src/redux/: store.js
dragonsnet/src/redux/reducers/: profileReducer.ts  tokenReducer.ts
(+7 files in other folders)
